# blink

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
config/: blink.desktop  blink.service  default.toml
src/: capture.rs  config.rs  encoder.rs  icon.rs  main.rs  service.rs  staging.rs  state.rs  tray.rs  viewer.rs
src/viewer/: app.rs  index.rs  widgets.rs
src/viewer/widgets/: calendar.rs  image_view.rs  thumbs.rs  timeline.rs
