[package]
name = "blink"
version = "0.1.0"
edition = "2021"
description = "Background screenshot daemon — periodic PNG snapshots into a year/month archive"
license = "MIT"
rust-version = "1.75"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ctrlc = { version = "3", features = ["termination"] }
directories = "5"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_extras = { version = "0.29", default-features = false, features = ["image", "file"] }
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2.186"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xcap = "0.0.14"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
